# blender-scripts

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
tests/: test_file.blend1  test_main.py
