[project]
name = "Read-blender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zefanja Jobse", email = "zefanjaj@gmail.com"},
]
dependencies = [
    "bpy>=4.0.0",
    "fake-bpy-module>=20240417",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
